# django-ninja-admin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  manage.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: check.md
.serena/: project.yml
app/: __init__.py
app/log/: __init__.py  api.py  model.py  schema.py
app/middleware/: auth_middleware.py  cors_middleware.py  log_middleware.py
app/notification/: __init__.py  api.py  app.py  model.py  permissions.py  schema.py
app/permissions/: __init__.py  base.py  user_permissions.py
app/setting/: __init__.py  api.py  models.py  schema.py  utils.py
app/user/: __init__.py  api.py  app.py  model.py  models.py  schemas.py  signals.py  test.py
app/utils/: log_utils.py  responses.py  validators.py
app/web/: __init__.py  app.py  urls.py  views.py
apps/core/: models.py  validations.py
apps/log/: __init__.py  api.py  model.py  models.py  selectors.py  services.py
apps/notification/: __init__.py  api.py  model.py  models.py  schemas.py  selectors.py  services.py
apps/setting/: __init__.py  api.py  model.py  models.py  schemas.py  selectors.py  services.py
apps/user/: __init__.py  api.py  apps.py  model.py  models.py  schemas.py  selectors.py  services.py  signals.py
apps/web/: __init__.py  app.py  urls.py  views.py
docs/: Django插件.md
scripts/: migrate.sh  run_server.sh
static/css/: modern-ui.css  noto-sans-sc.css
system/: api.py  settings.py  urls.py
templates/auth/: login.html  register.html
templates/components/: alert_components.html  profile.html  (+4 more)
(+87 files in other folders)
